# Peak_Trade

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  ADR_0001_Peak_Tool_Stack.md  AUTOMATION_SETUP_REPORT.md  BOUNDED_AUTO_READINESS_IMPLEMENTATION.md  CHANGELOG_LEARNING_PROMOTION_LOOP.md  CLAUDE.MD  CLOUD_BACKUP_README.md  COMPONENT_VAR_ROADMAP.patch  COMPONENT_VAR_ROADMAP_PATCHED.md  CYCLES_3_5_COMPLETION_REPORT.md  CYCLES_6_10_LAB_FAST_FORWARD_REPORT.md  DOCKER_COMPOSE_GRAFANA_ONLY.yml  DOCS_GATES_OPERATOR_PACK_V1_1_CHANGED_FILES.txt  DOCS_GATES_OPERATOR_PACK_V1_1_PR_BODY.md  DRIFT_GUARD_PR_WORKFLOW_SUMMARY.md  FINAL_SUMMARY.md  FIX_MATRIX_WORKFLOW_DOCS_INTEGRATION.md  IMPLEMENTATION_REPORT_KUPIEC_POF.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ALERTING.md  IMPLEMENTATION_SUMMARY_ISSUE_98.md  INSTALLATION_UND_ROADMAP_BIS_FINISH_2026-01-12.md  Makefile  NEXT_STEPS_WORKFLOW_DOCS.md  OPS_DOCTOR_IMPLEMENTATION_SUMMARY.md  P0_GUARDRAILS_QUICK_REFERENCE.md  P0_P1_SAFETY_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PHASE10_COMMANDS.md  PHASE3_CHANGED_FILES.txt  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE4B_PLAN.md  PHASE4E_CHANGED_FILES.txt  PHASE4E_CLOSEOUT_OPERATOR_GUIDE.md  PHASE4E_DELIVERABLES_CHECKLIST.md  PHASE4E_MERGE_READY_SUMMARY_DE.md  PHASE4E_OPERATOR_ZUSAMMENFASSUNG.md  (+65 more)
.claude/: settings.local.json
.cursor/: .env.example  PRE_PR_VALIDATION_RESULT.env  mcp.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  required_status_checks_main.txt
.ops_local/: README.md
PeakTradeRepo/: .gitignore
archive/: README.md
config/: PROMOTION_LOOP_README.md  README.md  ai.toml  backup.toml  bounded_live.toml  config.test.toml  config.toml  default.toml  execution_telemetry.toml  feature_flags.json  learning_surfaces.toml  live_environment.toml  live_policies.toml  model_registry.toml  performance.toml  portfolio_recipes.toml  promotion_loop_config.toml  r_and_d_presets.toml  regimes.toml  risk_kill_switch_example.toml  risk_layer_v1_example.toml  risk_layer_v1_scaffold.toml  risk_liquidity_gate_example.toml  risk_liquidity_gate_paper.toml  risk_stress_gate_example.toml  risk_var_gate_example.toml  shadow_pipeline_example.toml  strategy_tiering.toml  telemetry_alerting.toml  test_health_profiles.toml  todo_board.yaml  var_backtest.toml
docker/: .env.example  Dockerfile.api  Dockerfile.streamlit  MONITORING_README.md  README.md  compose.yml  docker-compose.minio.yml  docker-compose.monitoring.yml  docker-compose.obs.yml  docker-compose.webui.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTONOMOUS_AI_WORKFLOW.md  AUTONOMOUS_WORKFLOW_RELEASE_NOTES.md  AUTO_PORTFOLIOS.md  BACKTEST_ENGINE.md  BACKTEST_INVARIANTS.md  CASE_STUDY_REGIME_ANALYSIS_BTCUSDT.md  CASE_STUDY_REGIME_BTCUSDT_V1.md  CHANGELOG_OFFLINE_REALTIME_MA_CROSSOVER.md  CLAUDE_WORKFLOW.md  CLI_CHEATSHEET.md  CLOUD_BACKUP_GUIDE.md  CONFIGURATION_GUIDE.md  CONFIG_REGISTRY_USAGE.md  CONTRACT_VERIFICATION_FINAL.md  DASHBOARD_COMPLETION_MASTER_CHECKLIST.md  DATA_CONTRACTS.md  DEEP_RESEARCH_BACKOFFICE_OVERVIEW.md  DEMO_SCRIPT_DASHBOARD_V11.md  DEVELOPER_WORKFLOW_GUIDE.md  DEV_GUIDE_ADD_EXCHANGE.md  DEV_GUIDE_ADD_LIVE_RISK_LIMIT.md  DEV_GUIDE_ADD_PORTFOLIO_RECIPE.md  DEV_GUIDE_ADD_STRATEGY.md  DEV_SETUP.md  DEV_WORKFLOW_SHORTCUTS.md  DISASTER_RECOVERY_RUNBOOK.md  DOCKER_KOMPLETT_UEBERSICHT.md  DOCS_AUDIT_TRACKER.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENFORCEMENT_DRILL_REPORT.md  ERROR_HANDLING_GUIDE.md  EXECUTION_REPORTING.md  EXPERIMENT_EXPLORER.md  FEHLENDE_FEATURES_PEAK_TRADE.md  FINAL_VERIFICATION_SUMMARY.md  GETTING_STARTED.md  GITHUB_P0_GUARDRAILS_SETUP.md  GOVERNANCE_AND_SAFETY_OVERVIEW.md  (+177 more)
examples/: ai_framework_demo.py  data_contract_examples.py  monitoring_example.py  trace_context_demo.py
full_files_stand_02.12.2025/: INSTALLATION.txt
notebooks/: r_and_d_experiment_analysis_template.py
patches/: 0001-feat-trigger-training-integrate-psychology-heatmap-i.patch  0002-feat-reporting-add-psychology-heatmap-module-and-tem.patch
pausepoints/: 20260124T133039Z_PAUSEPOINT.md
policy_packs/: ci.yml  live_adjacent.yml  research.yml
reports/: ma_crossover_demo_ma_stats.json  ma_crossover_exp_single_demo_report.html  ma_crossover_html_demo_report.html  ma_crossover_html_demo_stats.json  ma_crossover_lb_demo_single_report.html  ma_crossover_scan_BTC_EUR_stats.json  ma_crossover_scan_ETH_EUR_stats.json  phase40_demo_report.md  portfolio_portfolio_stats.json  rsi_reversion_demo_rsi_stats.json  test_riskparity_portfolio_stats.json
scripts/: README.md  README_MERGE_LOG_PR.md  _forward_run_manifest.py  _market_data_provenance.py  _shared_forward_args.py  _shared_ohlcv_loader.py  analyze_experiments.py  analyze_regimes.py  analyze_risk_profile.py  backup_to_cloud.py  bounded_auto_dry_run_observer.py  build_auto_portfolios.py  build_todo_board_html.py  check_bounded_auto_readiness.py  check_claude_code_ready.sh  check_live_readiness.py  check_live_risk_limits.py  check_monitoring.py  check_todo_board_ci.sh  ci_smoke_fastlane.sh  claude_code_auth_reset.sh  cleanup_repo.sh  code_review.py  create_demo_trigger_training_session.py  create_info_packet.py  create_macro_event.py  create_notebook_templates.py  create_verified_merge_log_pr.sh  debug_signals.py  demo_backtest_with_risk.py  demo_complete_pipeline.py  demo_config_env.py  demo_config_registry.py  demo_config_registry_threadsafe.py  demo_execution_backtest.py  demo_knowledge_db.py  demo_kraken_simple.py  demo_live_overrides.py  demo_order_pipeline_backtest.py  demo_phase40_portfolio_backtest.py  (+229 more)
src/: __init__.py
tests/: __init__.py  conftest.py  test_alert_pipeline.py  test_alert_storage.py  test_alerts_api.py  test_analytics_experiments_smoke.py  test_armstrong_elkaroui_combi_experiment.py  test_autonomous_decision_engine.py  test_autonomous_monitors.py  test_autonomous_workflow_engine.py  test_backtest_execution_pipeline_integration.py  test_backtest_invariants.py  test_backtest_smoke.py  test_backup_recovery.py  test_basics.py  test_bouchaud_gatheral_cont_strategies.py  (+233 more)
(+6318 files in other folders)
