[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peak_trade"
version = "0.1.0"
description = "Modulares Trading- und Backtest-Framework für Krypto-Strategien."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "Frank Rauter"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
    "ccxt>=4.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx",  # Required by FastAPI TestClient in tests
    "ruff>=0.1.0",
    "black>=23.0.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# pytest config is in pytest.ini for better compatibility with warning filters

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Conservative gate to avoid legacy churn
# E = pycodestyle errors, F = pyflakes
select = ["E", "F"]
ignore = [
    "E402",  # module level import not at top of file
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable name (legacy code uses short names)
    "F401",  # imported but unused (many __init__.py re-exports)
    "F402",  # import shadowed by loop variable
    "F541",  # f-string without placeholders (many in legacy code)
    "F811",  # redefinition of unused name
    "F821",  # undefined name (forward references, type hints)
    "F841",  # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
# Tests may have unusual patterns
"tests/**/*.py" = ["F811", "F821"]
# Scripts may have different import patterns
"scripts/**/*.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
